--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,15 @@
 Package: genstats
 Title: Code and lectures for "Statistics for Genomic Data Science"
-Version: 0.1.01
+Version: 0.1.02
 Authors@R: person("Jeff", "Leek", email = "jtleek@gmail.com", role = c("aut", "cre"))
 Description: This package contains all the lectures and code for the class "Statistics for Genomic Data Science" https://www.coursera.org/course/genstats that is part of the Genomic Data Science Specialization https://www.coursera.org/specialization/genomics/41. 
 Depends: R (>= 3.2.1)
 License: MIT + file LICENSE
 VignetteBuilder: knitr
-URL: http://github.com/jtleek/checkpvalues
+URL: http://github.com/jtleek/genstats
 LazyData: TRUE
 Suggests: 
 	knitr,
-	BiocStyle,
 	devtools
 Imports:
 	RSkittleBrewer
